--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -21,4 +21,7 @@
     - { role: redshift, tags: ['redshift'] }
     - { role: keepass, tags: ['keepass'] }
     - { role: macspoof, tags: ['macspoof'], when: "system.macspoof == 'enabled'"}
-    - { role: sound, tags: ['sound'] }
+    #- { role: sound, tags: ['sound'] }
+    - { role: docker, tags: ['docker'] }
+    - { role: games, tags: ['games'] }
+    - { role: messengers, tags: ['messengers'] }
