--- a/ansible/roles/base/tasks/base.yml
+++ b/ansible/roles/base/tasks/base.yml
@@ -43,16 +43,16 @@
   notify:
     - rkhunter propupdate
 
-- name: Install paru as aur helper
+- name: Install yay as aur helper
   aur:
-    name: paru
+    name: yay
     user: "{{ user.name }}"
     skip_pgp: true
   register: task_result
   until: task_result is success
   retries: 10
   delay: 2
-
+  
 - name: Install microcode updates for intel (if necessary)
   community.general.pacman:
     name: intel-ucode
