--- a/ansible/roles/terminal/tasks/terminal.yml
+++ b/ansible/roles/terminal/tasks/terminal.yml
@@ -1,29 +1,11 @@
 ---
 
-- name: install urxvt terminal emulator
-  community.general.pacman:
-    name: rxvt-unicode
-    state: present
-  register: task_result
-  until: task_result is success
-  retries: 10
-  delay: 2
-
-- name: install alacritty terminal emulator
-  community.general.pacman:
-    name: "alacritty"
-    state: present
-  register: task_result
-  until: task_result is success
-  retries: 10
-  delay: 2
-
-- name: install kitty terminal emulator
-  community.general.pacman:
-    name: kitty
-    state: present
-  register: task_result
-  until: task_result is success
+- name: Install Wez terminal emulator
+  aur: name={{ item }} user={{ user.name }}
+  with_items:
+    - wezterm-git
+  register: wezinstall
+  until: wezinstall is success
   retries: 10
   delay: 2
 
