Try fix pacman install step

--- a/ansible/roles/editor/tasks/editor.yml
+++ b/ansible/roles/editor/tasks/editor.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: install vim editor
-  community.general.pacman:
+  pacman:
     name: vim
     state: present
   register: task_result
