--- a/ansible/roles/editor/tasks/editor.yml
+++ b/ansible/roles/editor/tasks/editor.yml
@@ -1,10 +1,12 @@
 ---
 
 - name: install vim editor
-  pacman:
-    name: vim
+  community.general.pacman:
+    name:
+      - vim
     state: present
   register: task_result
   until: task_result is success
   retires: 10
   delay: 2
+  
