fix chrony conig

--- a/ansible/roles/base/tasks/ntp.yml
+++ b/ansible/roles/base/tasks/ntp.yml
@@ -13,8 +13,8 @@
     - enable chrony
 
 - name: Configure chrony
-  ansible.builtin.copy: 
-    src: chrony.conf
+  ansible.builtin.template: 
+    src: chrony.conf.j2
     dest: /etc/chrony.conf
   notify:
     - restart chrony
