--- a/ansible/roles/redshift/tasks/main.yml
+++ b/ansible/roles/redshift/tasks/main.yml
@@ -9,6 +9,7 @@
     - python-gobject
     - python-xdg
     - redshift
+    - geoclue
   register: task_result
   until: task_result is success
   retries: 10
