add syslinux stuff for UEFI boot

--- a/ansible/roles/syslinux/tasks/main.yml
+++ b/ansible/roles/syslinux/tasks/main.yml
@@ -9,12 +9,31 @@
   retries: 10
   delay: 2
 
+- name: Install efibootmgr
+  community.general.pacman:
+    name: efibootmgr
+    state: present
+  register: task_result
+  until: task_result is success
+  retries: 10
+  delay: 2
+
 - name: Copy splash image into place
   ansible.builtin.copy:
     src: splash.png
-    dest: /boot/syslinux/
+    dest: /boot/EFI/syslinux/
 
 - name: Generate and push syslinux configuration
   ansible.builtin.template:
     src: syslinux.cfg.j2
-    dest: /boot/syslinux/syslinux.cfg
+    dest: /boot/EFI/syslinux/syslinux.cfg
+
+- name: Copy syslinux boot files to /boot partition
+  ansible.builtin.copy:
+    src: /usr/lib/syslinux/efi64/
+    dest: /boot/EFI/syslinux/
+
+- name: Copy graphical menu for boot
+  ansible.builtin.copy:
+    src: /usr/lib/syslinux/bios/vesamenu.c32
+    dest: /boot/EFI/syslinux/
