comment-out bootloader tweaks

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -10,8 +10,8 @@
     - { role: kernel, tags: ['kernel'] }
     - { role: base, tags: ['base'] }
     - { role: firewall, tags: ['firewall'] }
-    - { role: grub, tags: ['grub'], when: "bootloader == 'grub'"}
-    - { role: syslinux, tags: ['syslinux'], when: "bootloader == 'syslinux'"}
+    #- { role: grub, tags: ['grub'], when: "bootloader == 'grub'"}
+    #- { role: syslinux, tags: ['syslinux'], when: "bootloader == 'syslinux'"}
     - { role: dotfiles, tags: ['dotfiles'] }
     - { role: shell, tags: ['shell'] }
     - { role: editor, tags: ['editor'] }
