update grub handler in base

--- a/ansible/roles/base/handlers/main.yml
+++ b/ansible/roles/base/handlers/main.yml
@@ -8,3 +8,7 @@
 
 - name: enable chrony
   ansible.builtin.service: name=chrony state=started enabled=true
+
+- name: update grub
+  ansible.builtin.command: grub-mkconfig -o /boot/grub/grub.cfg
+  when: bootloader == "grub"
